<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelText"
                    android:text="@string/level"
                    style="@style/TopMenuText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelNumber"
                    android:text="@string/level_default"
                    android:maxLines="1"
                    style="@style/TopMenuText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virus_count"
                    android:id="@+id/virusText"
                    style="@style/TopMenuText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virus_count_default"
                    android:id="@+id/virusCounter"
                    android:maxLines="1"
                    style="@style/TopMenuText"/>
            </LinearLayout>

        </LinearLayout>

        <pt.isel.poo.tile.TilePanel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundLevel"
            app:widthTiles="9"
            app:heightTiles="9"
            app:gridLine="0"
            android:id="@+id/panel"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Save"
            android:id="@+id/saveButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/load"
            style="@style/Load"
            android:id="@+id/loadButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">
        <ImageButton
            android:layout_marginEnd="40dp"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:src="@drawable/iconleft"
            android:contentDescription="@string/leftArrow"
            android:id="@+id/leftArrow"/>
        <ImageButton
            android:layout_marginStart="40dp"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:src="@drawable/iconright"
            android:id="@+id/rightArrow"
            android:contentDescription="@string/rightArrow"/>
    </LinearLayout>

</LinearLayout>